tests/cases/vectors/errors/vector-generic-function-return-runtime-abi.ari
fn empty[T]() -> T {
  return [];
}

fn main() -> i64 {
  let values: Vec[i64] = empty<Vec[i64]>();
  return len(values);
}
